@@ -38,11 +38,17 @@ global $swordfish;
 $variables['swordfish'] = $swordfish;
 $variables['players'] = $players;
 
+// Set the module name.
+// This can be done in the admin.php file, but I just wanted to get it working first.
+$variables['module'] = "log_viewer";
+
 // Now set a container for the variables and langvars and send them off to the template system
 $variables['container'] = "variable";
 $langvars['container'] = "langvar";
 
 $template->AddVariables('langvars', $langvars);
 $template->AddVariables('variables', $variables);
-$template->Display("admin_log_viewer.tpl");
+
+// No longer need this.
+// $template->Display("admin_log_viewer.tpl");
 ?>
