@@ -1,3 +1,7 @@
+TheMightyDude (23 September 2012)
+--------------------------------------
+Did a quick fix on the admin section to allow the displaying of admin module templates, this may need some work to get right, but its working for now.
+
 TheKabal (22 September 2012)
 --------------------------------------
 Template driven admin.php
